...
    "delete": "delete",
    "dismiss": "dismiss",
    "error_message": "Something went wrong",
    "error_title": "Error",
    "ok": "ok",
    "see_all": "See All",
    "continue": "Continue",
    "skip": "Skip",
    "save": "Save",
    "premium": "Premium",
    "free": "Free"
  },
  "purchase_screen": {
...
    "generate": "Scan Recipe",
    "generate_ai": "Scan Recipe with AI (pro)",
    "instructions": "Upload a recipe image and then choose how to process it."
  },
  "login": {
    "test_login_title": "Test Login",
    "title": "Login to create a Cloud Vault!",
    "feature1": "Sync 5 recipes to the cloud",
    "feature2": "Share your vault with up to 2 friends and family",
    "feature3": "Join shared vaults of other users",
    "feature4": "Plan your meals with friends",
    "loginWith": "Login with",
    "or": "or",
    "button": "Continue with local vault"
  },
  "image_text_selection": {
    "generate_recipe_description": "Choose a field and start highlighting the text. Tap ‘Generate Recipe’ when you’re ready!",
    "choose_field_description": "Adjust your selection by dragging or resizing. Tap ‘Add Selection’ when you’re ready!",
    "add_selection": "Add Selection",
    "generate_recipe": "Generate Recipe",
...
